erDiagram
    USERS {
        int id PK
        string username UK
        string password_hash "column: password"
        datetime created_at
    }

    APP_SETTINGS {
        int id PK
        string key UK
        string value
        datetime updated_at
    }

    TEACHERS {
        int id PK
        string name
        string NIP UK
        string subject "nullable"
        datetime deleted_at "nullable"
        datetime created_at
    }

    STUDENTS {
        int id PK
        string name
        string NIM UK
        json face_embeddings "nullable"
        datetime deleted_at "nullable"
        datetime created_at
        datetime updated_at
    }

    CLASSES {
        int id PK
        string name
        string class_code UK
        int teacher_id FK "nullable"
        time start_time "nullable"
        time end_time "nullable"
        time start_presence "nullable"
        time end_presence "nullable"
        datetime deleted_at "nullable"
        datetime created_at
        datetime updated_at
    }

    CLASS_STUDENTS {
        int class_id PK,FK
        int student_id PK,FK
    }

    ATTENDANCES {
        int id PK
        int class_id FK
        int student_id FK
        date attendance_date
        string status
        datetime presence_at
        datetime created_at
        datetime updated_at
        string unique_class_student_date "class_id + student_id + attendance_date"
    }

    TEACHERS ||--o{ CLASSES : teaches
    CLASSES ||--o{ CLASS_STUDENTS : has
    STUDENTS ||--o{ CLASS_STUDENTS : enrolls
    CLASSES ||--o{ ATTENDANCES : records
    STUDENTS ||--o{ ATTENDANCES : has
